Redesigning wedding party styles. New images and clean up unused images

--- a/bridal-party.html
+++ b/bridal-party.html
@@ -42,41 +42,124 @@
 
 <!-- Begin Page-specific content here -->
         <div class="row">
-            <div class="col-sm-6">
-                <h3 class="column-title main-sub-title wedding-font">Hers</h3>
-                <div class="bridal-party__container">
-                    <div class="bridal-party__entry">
-                        <div class="bridal-party__name">Medini Ciavardoni</div>
-                        <div class="bridal-party__description">Gopi's friend from childhood</div>
+            <div class="column-title">
+                <h3 class="main-sub-title bridal-party-title">
+                    <span class="wedding-font">His</span>
+                    <span class="wedding-font">&nbsp;&amp;&nbsp;</span>
+                    <span class="wedding-font">Hers</span>
+                </h3>
+            </div>
+
+            <div class="party-member__row">
+                <div class="groomsman__container">
+                    <img class="party-member groomsman__img" src="images/party/jesse.jpg" alt="Jesse Ruben" />
+                    <div class="groomsman__info">
+                        <div class="groomsman__name"><strong>Jesse Ruben</strong></div>
+                        <div class="groomsman__relation">Eric's friend from childhood</div>
+                        <div class="groomsman__description">Singer, songwriter, guitarist. Master of jigsaw puzzles and generally interested in everything.</div>
                     </div>
-                    <img id="medini-pic" class="bridal-party__img" src="images/party/medini.jpg" />
                 </div>
-                <div class="bridal-party__container">
-                    <div class="bridal-party__entry">
-                        <div class="bridal-party__name">Maggie Kissel</div>
-                        <div class="bridal-party__description">Gopi's friend and roommate from medical school</div>
+                <div class="bridesmaid__container">
+                    <img class="party-member bridesmaid__img" src="images/party/medini.jpg" alt="Medini Ciavardone" />
+                    <div class="bridesmaid__info">
+                        <div class="bridesmaid__name"><strong>Medini Ciavardone</strong></div>
+                        <div class="bridesmaid__relation">Gopi's friend from childhood</div>
+                        <div class="bridesmaid__description">&nbsp;</div>
                     </div>
-                    <img id="maggie-pic" class="bridal-party__img" src="images/party/maggie.jpg" />
                 </div>
             </div>
-            <div class="col-sm-6">
-                <h3 class="column-title">His</h3>
-                <div class="bridal-party__container">
-                    <div class="bridal-party__entry">
-                        <div class="bridal-party__name">Jesse Ruben</div>
-                        <div class="bridal-party__description">He bought me milk when we were 10 and we have been friends ever since.</div>
+            <div class="party-member__row">
+                <div class="groomsman__container">
+                    <img class="party-member groomsman__img" src="images/party/scott.jpg" alt="Scott Connelly" />
+                    <div class="groomsman__info">
+                        <div class="groomsman__name"><strong>Scott Connelly</strong></div>
+                        <div class="groomsman__relation">Eric's younger, middle brother</div>
+                        <div class="groomsman__description">Creative writer and novellist. Talented martial artist and collector of pokemon cards.</div>
                     </div>
-                    <img id="jesse-pic" class="bridal-party__img" src="images/party/jesse.jpg" />
                 </div>
-                <div class="bridal-party__container">
-                    <div class="bridal-party__entry">
-                        <div class="bridal-party__name">Scott Connelly</div>
-                        <div class="bridal-party__description">Great brother. Excellent collector of pokemon cards.</div>
+                <div class="bridesmaid__container">
+                    <img class="party-member bridesmaid__img" src="images/party/lex.jpg" alt="Alexis Patten" />
+                    <div class="bridesmaid__info">
+                        <div class="bridesmaid__name"><strong>Alexis Patten</strong></div>
+                        <div class="bridesmaid__relation">Gopi's friend from high school</div>
+                        <div class="bridesmaid__description">Represents Briarcliff</div>
                     </div>
-                    <img id="scott-pic" class="bridal-party__img" src="images/party/scott.jpg" />
+                </div>
+            </div>
+            <div class="party-member__row">
+                <div class="groomsman__container">
+                    <img class="party-member groomsman__img" src="images/party/ian.jpg" alt="Ian Connelly" />
+                    <div class="groomsman__info">
+                        <div class="groomsman__name"><strong>Ian Connelly</strong></div>
+                        <div class="groomsman__relation">Eric's youngest brother</div>
+                        <div class="groomsman__description">Movie screenwriter. Good taste in clothes, music and youtube videos.</div>
+                    </div>
+                </div>
+                <div class="bridesmaid__container">
+                    <img class="party-member bridesmaid__img" src="images/party/melanie.jpg" alt="Melanie Hyman" />
+                    <div class="bridesmaid__info">
+                        <div class="bridesmaid__name"><strong>Melanie Hyman</strong></div>
+                        <div class="bridesmaid__relation">Gopi's friend from college</div>
+                        <div class="bridesmaid__description">Shares almost all of Gopi's opinions and major life experiences</div>
+                    </div>
+                </div>
+            </div>
+            <div class="party-member__row">
+                <div class="groomsman__container">
+                    <img class="party-member groomsman__img" src="images/party/jason.jpg" alt="Jason Rose" />
+                    <div class="groomsman__info">
+                        <div class="groomsman__name"><strong>Jason Rose</strong></div>
+                        <div class="groomsman__relation">Eric's friend from high school</div>
+                        <div class="groomsman__description">Philly expert and poker player extraordinaire.</div>
+                    </div>
+                </div>
+                <div class="bridesmaid__container">
+                    <img class="party-member bridesmaid__img" src="images/party/amanda.jpg" alt="Amanda Baryshyan" />
+                    <div class="bridesmaid__info">
+                        <div class="bridesmaid__name"><strong>Amanda Baryshyan</strong></div>
+                        <div class="bridesmaid__relation">Gopi's friend and roommate from college</div>
+                        <div class="bridesmaid__description">Biomedical engineer and scientist. Likes board games and new hairstyles.</div>
+                    </div>
+                </div>
+            </div>
+            <div class="party-member__row">
+                <div class="groomsman__container">
+                    <img class="party-member groomsman__img" src="images/party/jake.jpg" alt="Jake Horenstein" />
+                    <div class="groomsman__info">
+                        <div class="groomsman__name"><strong>Jake Horenstein</strong></div>
+                        <div class="groomsman__relation">Eric's friend from high school</div>
+                        <div class="groomsman__description">Sports fan, analyst and critic. Skilled at everything from volleyball to cooking buffalo chicken dip.</div>
+                    </div>
+                </div>
+                <div class="bridesmaid__container">
+                    <img class="party-member bridesmaid__img" src="images/party/maggie.jpg" alt="Maggie Kissel" />
+                    <div class="bridesmaid__info">
+                        <div class="bridesmaid__name"><strong>Maggie Kissel</strong></div>
+                        <div class="bridesmaid__relation">Gopi's friend and roommate from med school</div>
+                        <div class="bridesmaid__description"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="party-member__row">
+                <div class="groomsman__container">
+                    <img class="party-member groomsman__img" src="images/party/bryan.jpg" alt="Bryan Latshaw" />
+                    <div class="groomsman__info">
+                        <div class="groomsman__name"><strong>Bryan Latshaw</strong></div>
+                        <div class="groomsman__relation">Eric's friend from high school</div>
+                        <div class="groomsman__description">Outwardly foolish but secretly smart. Enjoys his budding gun collection and riding the bus.</div>
+                    </div>
+                </div>
+                <div class="bridesmaid__container">
+                    <img class="party-member bridesmaid__img" src="images/party/melissa.jpg" alt="Melissa Niedfeld" />
+                    <div class="bridesmaid__info">
+                        <div class="bridesmaid__name"><strong>Melissa Niedfeld</strong></div>
+                        <div class="bridesmaid__relation">Gopi's friend from med school</div>
+                        <div class="bridesmaid__description"></div>
+                    </div>
                 </div>
             </div>
         </div>
+
 <!-- End Page-specific content here -->
 
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
