--- a/details.html
+++ b/details.html
@@ -42,26 +42,33 @@
 
 <!-- Begin Page-specific content here -->
         <div class="row">
-            <div class="col-sm-6">
-                <h3>Saturday: The Ceremony</h3>
-                <div>Ceremony and reception will be held on
-                    <strong>Saturday, October 4, 2014</strong>
-                    <br><br>
-                    <strong>The Garrison Golf Club</strong><br>
-                    2015 US 9<br>
-                    Garrison, New York 10524<br>
-                    (845)-424-3604<br>
-                    <a href="http://www.thegarrison.com/contact-us.html" target="_blank">more information</a>
-                    <br><br>
-                    Further details, including the time of the ceremony, will be provided in the invitations.
-                    Transportation from the Hyatt House and Marriott Courtyard Fishkill hotels.
+            <div class="center-col">
+                <div class="col-sm-6">
+                    <h3>Saturday: Ceremony</h3>
+                    <div>Ceremony and reception will be held on
+                        <strong>Saturday, October 4, 2014</strong>
+                        <br><br>
+                        <strong>The Garrison Golf Club</strong><br>
+                        2015 US 9<br>
+                        Garrison, New York 10524<br>
+                        (845)-424-3604<br>
+                        <a href="http://www.thegarrison.com/contact-us.html" target="_blank">more information</a>
+                        <br><br>
+                        Further details, including the time of the ceremony, will be provided in the invitations.
+                        Transportation from the Hyatt House and Marriott Courtyard Fishkill hotels.
+                    </div>
+
+                    <h3>Saturday: After Party</h3>
+                    <div>The after party will be held at the Hyatt House hotel.
+                    </div>
+
+                    <h3>Sunday: Brunch</h3>
+                    <div>Brunch will be served Sunday morning at the Hyatt House hotel.
+                    </div>
                 </div>
-                <h3>Sunday: Brunch</h3>
-                <div>Brunch will be served Sunday morning at the Hyatt House hotel.
+                <div class="col-sm-6">
+                    <img class="col-sm-12" src="images/the-garrison.jpg" alt="View of the Garrison" />
                 </div>
-            </div>
-            <div class="col-sm-6">
-                <img class="col-sm-9" src="images/the-garrison.jpg" alt="View of the Garrison" />
             </div>
         </div>
 <!-- End Page-specific content here -->
