--- a/hotel.html
+++ b/hotel.html
@@ -42,13 +42,13 @@
 
 <!-- Begin Page-specific content here -->
         <div class="row overview-row">
-            <div class="center-col-9">
+            <div class="center-col">
                 We have reserved some hotel room blocks at two hotels near the wedding venue. To reserve your room, please mention that you are attending the Desai/Connelly wedding.
             </div>
         </div>
         <div class="row">
-            <div class="center-col-9">
-                <div class="col-sm-3">
+            <div class="center-col">
+                <div class="col-sm-6">
                     <div class="hotel__info">
                         <h3 class="page-title">Fishkill Hyatt House</h3>
                         <p>
