--- a/registry.html
+++ b/registry.html
@@ -42,8 +42,8 @@
 
 <!-- Begin Page-specific content here -->
         <div class="row">
-            <div class="center-col-9">
-                <div class="col-sm-3">
+            <div class="center-col">
+                <div class="col-sm-6">
                     <h3 class="page-title">Our Registries</h3>
                     <!--<a href="#" target="_blank">
                         <img class="registry__icon" src="images/registry/macys.jpg" alt="Macys" />
