Image and bridal party descriptions tweaked

--- a/bridal-party.html
+++ b/bridal-party.html
@@ -74,7 +74,7 @@
                     <div class="groomsman__info">
                         <div class="groomsman__name"><strong>Scott Connelly</strong></div>
                         <div class="groomsman__relation">Eric's younger, middle brother</div>
-                        <div class="groomsman__description">Creative writer and novellist. Talented martial artist and collector of pokemon cards.</div>
+                        <div class="groomsman__description">Creative writer and novellist. Talented martial artist and admirer of Teddy Roosevelt.</div>
                     </div>
                 </div>
                 <div class="bridesmaid__container">
