Bridal party description updates

--- a/bridal-party.html
+++ b/bridal-party.html
@@ -64,7 +64,7 @@
                     <div class="bridesmaid__info">
                         <div class="bridesmaid__name"><strong>Medini Ciavardone</strong></div>
                         <div class="bridesmaid__relation">Gopi's friend from childhood</div>
-                        <div class="bridesmaid__description">&nbsp;</div>
+                        <div class="bridesmaid__description">Gopi's oldest friend and partner in crime.</div>
                     </div>
                 </div>
             </div>
@@ -73,8 +73,8 @@
                     <img class="party-member groomsman__img" src="images/party/scott.jpg" alt="Scott Connelly" />
                     <div class="groomsman__info">
                         <div class="groomsman__name"><strong>Scott Connelly</strong></div>
-                        <div class="groomsman__relation">Eric's younger, middle brother</div>
-                        <div class="groomsman__description">Creative writer and novellist. Talented martial artist and admirer of Teddy Roosevelt.</div>
+                        <div class="groomsman__relation">Eric's younger brother</div>
+                        <div class="groomsman__description">Creative writer and novellist. Talented martial artist and Teddy Roosevelt admirer.</div>
                     </div>
                 </div>
                 <div class="bridesmaid__container">
@@ -82,7 +82,7 @@
                     <div class="bridesmaid__info">
                         <div class="bridesmaid__name"><strong>Alexis Patten</strong></div>
                         <div class="bridesmaid__relation">Gopi's friend from high school</div>
-                        <div class="bridesmaid__description">Represents Briarcliff</div>
+                        <div class="bridesmaid__description"></div>
                     </div>
                 </div>
             </div>
@@ -100,7 +100,7 @@
                     <div class="bridesmaid__info">
                         <div class="bridesmaid__name"><strong>Melanie Hyman</strong></div>
                         <div class="bridesmaid__relation">Gopi's friend from college</div>
-                        <div class="bridesmaid__description">Shares almost all of Gopi's opinions and major life experiences</div>
+                        <div class="bridesmaid__description">PhD student in public health. Shares almost all of Gopi's opinions and major life experiences.</div>
                     </div>
                 </div>
             </div>
@@ -110,15 +110,15 @@
                     <div class="groomsman__info">
                         <div class="groomsman__name"><strong>Jason Rose</strong></div>
                         <div class="groomsman__relation">Eric's friend from high school</div>
-                        <div class="groomsman__description">Philly expert and poker player extraordinaire.</div>
+                        <div class="groomsman__description">Philly expert, poker player extraordinaire and all-star dad.</div>
                     </div>
                 </div>
                 <div class="bridesmaid__container">
                     <img class="party-member bridesmaid__img" src="images/party/amanda.jpg" alt="Amanda Baryshyan" />
                     <div class="bridesmaid__info">
                         <div class="bridesmaid__name"><strong>Amanda Baryshyan</strong></div>
-                        <div class="bridesmaid__relation">Gopi's friend and roommate from college</div>
-                        <div class="bridesmaid__description">Biomedical engineer and scientist. Likes board games and new hairstyles.</div>
+                        <div class="bridesmaid__relation">Gopi's friend from college</div>
+                        <div class="bridesmaid__description">Biomedical engineer and proud new mama. Likes board games and new hairstyles.</div>
                     </div>
                 </div>
             </div>
@@ -135,8 +135,8 @@
                     <img class="party-member bridesmaid__img" src="images/party/maggie.jpg" alt="Maggie Kissel" />
                     <div class="bridesmaid__info">
                         <div class="bridesmaid__name"><strong>Maggie Kissel</strong></div>
-                        <div class="bridesmaid__relation">Gopi's friend and roommate from med school</div>
-                        <div class="bridesmaid__description"></div>
+                        <div class="bridesmaid__relation">Gopi's friend from med school</div>
+                        <div class="bridesmaid__description">Fellow pediatrician</div>
                     </div>
                 </div>
             </div>
@@ -154,7 +154,7 @@
                     <div class="bridesmaid__info">
                         <div class="bridesmaid__name"><strong>Melissa Niedfeld</strong></div>
                         <div class="bridesmaid__relation">Gopi's friend from med school</div>
-                        <div class="bridesmaid__description"></div>
+                        <div class="bridesmaid__description">Fellow pediatrician</div>
                     </div>
                 </div>
             </div>
