Addding a bunch of around-the-world pics

--- a/gallery.html
+++ b/gallery.html
@@ -43,7 +43,89 @@
 
 <!-- Begin Page-specific content here -->
         <div class="row">
-            <h3 class="column-title">Around the World Gallery</h3>
+            <h3 class="column-title">Around the World with Gopi and Eric</h3>
+            <div class="col-sm-12">
+                <div class="col-sm-6 gallery__container">
+                    <img class="gallery__img" src="images/gallery/sanfrancisco.jpg" />
+                    <div class="gallery__description"><strong>San Francisco, CA</strong>, at the Golden Gate Bridge</div>
+                </div>
+                <div class="col-sm-6 gallery__container">
+                    <img class="gallery__img" src="images/gallery/sonoma.jpg" />
+                    <div class="gallery__description">Wine tasting in <strong>Sonoma, CA</strong></div>
+                </div>
+            </div>
+            <div class="col-sm-12">
+                <div class="col-sm-6 gallery__container">
+                    <img class="gallery__img" src="images/gallery/austin.jpg" />
+                    <div class="gallery__description"><strong>Austin, TX</strong>, getting lovely coffee</div>
+                </div>
+                <div class="col-sm-6 gallery__container">
+                    <img class="gallery__img" src="images/gallery/chicago.jpg" />
+                    <div class="gallery__description"><strong>Chicago, IL</strong>, touring the architecture</div>
+                </div>
+            </div>
+            <div class="col-sm-12">
+                <div class="col-sm-6 gallery__container">
+                    <img class="gallery__img" src="images/gallery/lakegeneva.jpg" />
+                    <div class="gallery__description"><strong>Lake Geneva, WI</strong>, dinner at the beach</div>
+                </div>
+                <div class="col-sm-6 gallery__container">
+                    <img class="gallery__img" src="images/gallery/costarica.jpg" />
+                    <div class="gallery__description"><strong>Costa Rica</strong>, on the ATV tour</div>
+                </div>
+            </div>
+            <div class="col-sm-12">
+                <div class="col-sm-6 gallery__container">
+                    <img class="gallery__img" src="images/gallery/panama3.jpg" />
+                    <div class="gallery__description">Kayaks in the rainforest of <strong>Panama</strong></div>
+                </div>
+                <div class="col-sm-6 gallery__container">
+                    <img class="gallery__img" src="images/gallery/aruba.jpg" />
+                    <div class="gallery__description"><strong>Aruba</strong> sunset dinner</div>
+                </div>
+            </div>
+            <div class="col-sm-12">
+                <div class="col-sm-6 gallery__container">
+                    <img class="gallery__img" src="images/gallery/caribbean.jpg" />
+                    <div class="gallery__description"><strong>Caribbean</strong> cruise</div>
+                </div>
+                <div class="col-sm-6 gallery__container">
+                    <img class="gallery__img" src="images/gallery/harrypotter.jpg" />
+                    <div class="gallery__description"><strong>Harry Potter World, FL</strong></div>
+                </div>
+            </div>
+            <div class="col-sm-12">
+                <div class="col-sm-6 gallery__container">
+                    <img class="gallery__img" src="images/gallery/disneyworld.jpg" />
+                    <div class="gallery__description"><strong>Disney World, FL</strong> cruise</div>
+                </div>
+                <div class="col-sm-6 gallery__container">
+                    <img class="gallery__img" src="images/gallery/eg_faces.jpg" />
+                    <div class="gallery__description"><strong>New York, NY</strong>, picnic in Central Park</div>
+                </div>
+            </div>
+            <div class="col-sm-12">
+                <div class="col-sm-6 gallery__container">
+                    <img class="gallery__img" src="images/gallery/boston3.jpg" />
+                    <div class="gallery__description">Fanueil Hall in <strong>Boston, MA</strong></div>
+                </div>
+                <div class="col-sm-6 gallery__container">
+                    <img class="gallery__img" src="images/gallery/madrid.jpg" />
+                    <div class="gallery__description"><strong>Madrid</strong>, outside the royal palace</div>
+                </div>
+            </div>
+            <div class="col-sm-12">
+                <div class="col-sm-6 gallery__container">
+                    <img class="gallery__img" src="images/gallery/paris.jpg" />
+                    <div class="gallery__description"><strong>Paris</strong>, at the Louvre</div>
+                </div>
+                <div class="col-sm-6 gallery__container">
+                    <img class="gallery__img" src="images/gallery/paris_eiffel.jpg" />
+                    <div class="gallery__description"><strong>Paris</strong>, at the Eiffel Tower</div>
+                </div>
+            </div>
+
+            <h3 class="column-title">More pictures</h3>
             <div class="col-sm-6">
                 <div class="gallery__container">
                     <img class="gallery__img" src="images/gallery/eg_baseball.jpg" />
