--- a/gallery.html
+++ b/gallery.html
@@ -71,13 +71,13 @@
                 </div>
                 <div class="col-sm-6 gallery__container">
                     <img class="gallery__img" src="images/gallery/costarica.jpg" />
-                    <div class="gallery__description"><strong>Costa Rica</strong>, on the ATV tour</div>
+                    <div class="gallery__description"><strong>Costa Rica</strong>, on an ATV tour</div>
                 </div>
             </div>
             <div class="col-sm-12">
                 <div class="col-sm-6 gallery__container">
                     <img class="gallery__img" src="images/gallery/panama3.jpg" />
-                    <div class="gallery__description">Kayaks in the rainforest of <strong>Panama</strong></div>
+                    <div class="gallery__description">Drinking coconuts in the rainforest of <strong>Panama</strong></div>
                 </div>
                 <div class="col-sm-6 gallery__container">
                     <img class="gallery__img" src="images/gallery/aruba.jpg" />
@@ -97,7 +97,7 @@
             <div class="col-sm-12">
                 <div class="col-sm-6 gallery__container">
                     <img class="gallery__img" src="images/gallery/disneyworld.jpg" />
-                    <div class="gallery__description"><strong>Disney World, FL</strong> cruise</div>
+                    <div class="gallery__description"><strong>Disney World</strong> marathon</div>
                 </div>
                 <div class="col-sm-6 gallery__container">
                     <img class="gallery__img" src="images/gallery/eg_faces.jpg" />
@@ -116,26 +116,50 @@
             </div>
             <div class="col-sm-12">
                 <div class="col-sm-6 gallery__container">
-                    <img class="gallery__img" src="images/gallery/paris.jpg" />
-                    <div class="gallery__description"><strong>Paris</strong>, at the Louvre</div>
-                </div>
-                <div class="col-sm-6 gallery__container">
                     <img class="gallery__img" src="images/gallery/paris_eiffel.jpg" />
                     <div class="gallery__description"><strong>Paris</strong>, at the Eiffel Tower</div>
+                </div>
+                <div class="col-sm-6 gallery__container">
+                    <img class="gallery__img" src="images/gallery/germany.jpg" />
+                    <div class="gallery__description"><strong>Mainz, Germany</strong>, in the main square</div>
+                </div>
+            </div>
+            <div class="col-sm-12">
+                <div class="col-sm-6 gallery__container">
+                    <img class="gallery__img" src="images/gallery/tajmahal.jpg" />
+                    <div class="gallery__description">At the Taj Mahal in <strong>Agra, India</strong></div>
                 </div>
             </div>
 
             <h3 class="column-title">More pictures</h3>
-            <div class="col-sm-6">
-                <div class="gallery__container">
+            <div class="col-sm-12">
+                <div class="col-sm-6 gallery__container">
                     <img class="gallery__img" src="images/gallery/eg_baseball.jpg" />
-                    <div class="gallery__description"><strong>New York</strong>, at the baseball game</div>
+                    <div class="gallery__description">At the baseball game</div>
+                </div>
+                <div class="col-sm-6 gallery__container">
+                    <img class="gallery__img" src="images/gallery/eg_faces.jpg" />
+                    <div class="gallery__description">Picnic in Central Park</div>
                 </div>
             </div>
-            <div class="col-sm-6">
-                <div class="gallery__container">
-                    <img class="gallery__img" src="images/gallery/eg_faces.jpg" />
-                    <div class="gallery__description"><strong>New York</strong>, picnic in Central Park</div>
+            <div class="col-sm-12">
+                <div class="col-sm-6 gallery__container">
+                    <img class="gallery__img" src="images/gallery/boston.jpg" />
+                    <div class="gallery__description">After the Boston Marathon(!)</div>
+                </div>
+                <div class="col-sm-6 gallery__container">
+                    <img class="gallery__img" src="images/gallery/smorgasborg.jpg" />
+                    <div class="gallery__description">At Smorgasborg weekly food fair in Brooklyn</div>
+                </div>
+            </div>
+            <div class="col-sm-12">
+                <div class="col-sm-6 gallery__container">
+                    <img class="gallery__img" src="images/gallery/applepicking.jpg" />
+                    <div class="gallery__description">Picking apples</div>
+                </div>
+                <div class="col-sm-6 gallery__container">
+                    <img class="gallery__img" src="images/gallery/halloween.jpg" />
+                    <div class="gallery__description">As Calvin and Hobbes for Halloween</div>
                 </div>
             </div>
         </div>
