Nailed the Gallery image styles!

--- a/gallery.html
+++ b/gallery.html
@@ -44,121 +44,167 @@
 <!-- Begin Page-specific content here -->
         <div class="row">
             <h3 class="column-title">Around the World with Gopi and Eric</h3>
-            <div class="col-sm-12">
-                <div class="col-sm-6 gallery__container">
-                    <img class="gallery__img" src="images/gallery/sanfrancisco.jpg" />
+            <div class="col-sm-12 gallery__row">
+                <div class="gallery__container">
+                    <div class="gallery__img-container">
+                        <img class="gallery__img" src="images/gallery/sanfrancisco.jpg" />
+                    </div>
                     <div class="gallery__description"><strong>San Francisco, CA</strong>, at the Golden Gate Bridge</div>
                 </div>
-                <div class="col-sm-6 gallery__container">
-                    <img class="gallery__img" src="images/gallery/sonoma.jpg" />
+                <div class="gallery__container">
+                    <div class="gallery__img-container">
+                        <img class="gallery__img" src="images/gallery/sonoma.jpg" />
+                    </div>
                     <div class="gallery__description">Wine tasting in <strong>Sonoma, CA</strong></div>
                 </div>
             </div>
-            <div class="col-sm-12">
-                <div class="col-sm-6 gallery__container">
-                    <img class="gallery__img" src="images/gallery/austin.jpg" />
+            <div class="col-sm-12 gallery__row">
+                <div class="gallery__container">
+                    <div class="gallery__img-container">
+                        <img class="gallery__img" src="images/gallery/austin.jpg" />
+                    </div>
                     <div class="gallery__description"><strong>Austin, TX</strong>, getting lovely coffee</div>
                 </div>
-                <div class="col-sm-6 gallery__container">
-                    <img class="gallery__img" src="images/gallery/chicago.jpg" />
+                <div class="gallery__container">
+                    <div class="gallery__img-container">
+                        <img class="gallery__img" src="images/gallery/chicago.jpg" />
+                    </div>
                     <div class="gallery__description"><strong>Chicago, IL</strong>, touring the architecture</div>
                 </div>
             </div>
-            <div class="col-sm-12">
-                <div class="col-sm-6 gallery__container">
-                    <img class="gallery__img" src="images/gallery/lakegeneva.jpg" />
+            <div class="col-sm-12 gallery__row">
+                <div class="gallery__container">
+                    <div class="gallery__img-container">
+                        <img class="gallery__img" src="images/gallery/lakegeneva.jpg" />
+                    </div>
                     <div class="gallery__description"><strong>Lake Geneva, WI</strong>, dinner at the beach</div>
                 </div>
-                <div class="col-sm-6 gallery__container">
-                    <img class="gallery__img" src="images/gallery/costarica.jpg" />
+                <div class="gallery__container">
+                    <div class="gallery__img-container">
+                        <img class="gallery__img" src="images/gallery/costarica.jpg" />
+                    </div>
                     <div class="gallery__description"><strong>Costa Rica</strong>, on an ATV tour</div>
                 </div>
             </div>
-            <div class="col-sm-12">
-                <div class="col-sm-6 gallery__container">
-                    <img class="gallery__img" src="images/gallery/panama3.jpg" />
+            <div class="col-sm-12 gallery__row">
+                <div class="gallery__container">
+                    <div class="gallery__img-container">
+                        <img class="gallery__img" src="images/gallery/panama3.jpg" />
+                    </div>
                     <div class="gallery__description">Drinking coconuts in the rainforest of <strong>Panama</strong></div>
                 </div>
-                <div class="col-sm-6 gallery__container">
-                    <img class="gallery__img" src="images/gallery/aruba.jpg" />
+                <div class="gallery__container">
+                    <div class="gallery__img-container">
+                        <img class="gallery__img" src="images/gallery/aruba.jpg" />
+                    </div>
                     <div class="gallery__description"><strong>Aruba</strong> sunset dinner</div>
                 </div>
             </div>
-            <div class="col-sm-12">
-                <div class="col-sm-6 gallery__container">
-                    <img class="gallery__img" src="images/gallery/caribbean.jpg" />
+            <div class="col-sm-12 gallery__row">
+                <div class="gallery__container">
+                    <div class="gallery__img-container">
+                        <img class="gallery__img" src="images/gallery/caribbean.jpg" />
+                    </div>
                     <div class="gallery__description"><strong>Caribbean</strong> cruise</div>
                 </div>
-                <div class="col-sm-6 gallery__container">
-                    <img class="gallery__img" src="images/gallery/harrypotter.jpg" />
+                <div class="gallery__container">
+                    <div class="gallery__img-container">
+                        <img class="gallery__img" src="images/gallery/harrypotter.jpg" />
+                    </div>
                     <div class="gallery__description"><strong>Harry Potter World, FL</strong></div>
                 </div>
             </div>
-            <div class="col-sm-12">
-                <div class="col-sm-6 gallery__container">
-                    <img class="gallery__img" src="images/gallery/disneyworld.jpg" />
+            <div class="col-sm-12 gallery__row">
+                <div class="gallery__container">
+                    <div class="gallery__img-container">
+                        <img class="gallery__img" src="images/gallery/disneyworld.jpg" />
+                    </div>
                     <div class="gallery__description"><strong>Disney World</strong> marathon</div>
                 </div>
-                <div class="col-sm-6 gallery__container">
-                    <img class="gallery__img" src="images/gallery/eg_faces.jpg" />
+                <div class="gallery__container">
+                    <div class="gallery__img-container">
+                        <img class="gallery__img" src="images/gallery/eg_faces.jpg" />
+                    </div>
                     <div class="gallery__description"><strong>New York, NY</strong>, picnic in Central Park</div>
                 </div>
             </div>
-            <div class="col-sm-12">
-                <div class="col-sm-6 gallery__container">
-                    <img class="gallery__img" src="images/gallery/boston3.jpg" />
+            <div class="col-sm-12 gallery__row">
+                <div class="gallery__container">
+                    <div class="gallery__img-container">
+                        <img class="gallery__img" src="images/gallery/boston3.jpg" />
+                    </div>
                     <div class="gallery__description">Fanueil Hall in <strong>Boston, MA</strong></div>
                 </div>
-                <div class="col-sm-6 gallery__container">
-                    <img class="gallery__img" src="images/gallery/madrid.jpg" />
+                <div class="gallery__container">
+                    <div class="gallery__img-container">
+                        <img class="gallery__img" src="images/gallery/madrid.jpg" />
+                    </div>
                     <div class="gallery__description"><strong>Madrid</strong>, outside the royal palace</div>
                 </div>
             </div>
-            <div class="col-sm-12">
-                <div class="col-sm-6 gallery__container">
-                    <img class="gallery__img" src="images/gallery/paris_eiffel.jpg" />
+            <div class="col-sm-12 gallery__row">
+                <div class="gallery__container">
+                    <div class="gallery__img-container">
+                        <img class="gallery__img" src="images/gallery/paris_eiffel.jpg" />
+                    </div>
                     <div class="gallery__description"><strong>Paris</strong>, at the Eiffel Tower</div>
                 </div>
-                <div class="col-sm-6 gallery__container">
-                    <img class="gallery__img" src="images/gallery/germany.jpg" />
+                <div class="gallery__container">
+                    <div class="gallery__img-container">
+                        <img class="gallery__img" src="images/gallery/germany.jpg" />
+                    </div>
                     <div class="gallery__description"><strong>Mainz, Germany</strong>, in the main square</div>
                 </div>
             </div>
-            <div class="col-sm-12">
-                <div class="col-sm-6 gallery__container">
-                    <img class="gallery__img" src="images/gallery/tajmahal.jpg" />
+            <div class="col-sm-12 gallery__row">
+                <div class="gallery__container">
+                    <div class="gallery__img-container">
+                        <img class="gallery__img" src="images/gallery/tajmahal.jpg" />
+                    </div>
                     <div class="gallery__description">At the Taj Mahal in <strong>Agra, India</strong></div>
                 </div>
             </div>
 
             <h3 class="column-title">More pictures</h3>
-            <div class="col-sm-12">
-                <div class="col-sm-6 gallery__container">
-                    <img class="gallery__img" src="images/gallery/eg_baseball.jpg" />
+            <div class="col-sm-12 gallery__row">
+                <div class="gallery__container">
+                    <div class="gallery__img-container">
+                        <img class="gallery__img" src="images/gallery/eg_baseball.jpg" />
+                    </div>
                     <div class="gallery__description">At the baseball game</div>
                 </div>
-                <div class="col-sm-6 gallery__container">
-                    <img class="gallery__img" src="images/gallery/eg_faces.jpg" />
+                <div class="gallery__container">
+                    <div class="gallery__img-container">
+                        <img class="gallery__img" src="images/gallery/eg_faces.jpg" />
+                    </div>
                     <div class="gallery__description">Picnic in Central Park</div>
                 </div>
             </div>
-            <div class="col-sm-12">
-                <div class="col-sm-6 gallery__container">
-                    <img class="gallery__img" src="images/gallery/boston.jpg" />
-                    <div class="gallery__description">After the Boston Marathon(!)</div>
+            <div class="col-sm-12 gallery__row">
+                <div class="gallery__container">
+                    <div class="gallery__img-container">
+                        <img class="gallery__img" src="images/gallery/boston.jpg" />
+                    </div>
+                    <div class="gallery__description">After the Boston Marathon!</div>
                 </div>
-                <div class="col-sm-6 gallery__container">
-                    <img class="gallery__img" src="images/gallery/smorgasborg.jpg" />
+                <div class="gallery__container">
+                    <div class="gallery__img-container">
+                        <img class="gallery__img" src="images/gallery/smorgasborg.jpg" />
+                    </div>
                     <div class="gallery__description">At Smorgasborg weekly food fair in Brooklyn</div>
                 </div>
             </div>
-            <div class="col-sm-12">
-                <div class="col-sm-6 gallery__container">
-                    <img class="gallery__img" src="images/gallery/applepicking.jpg" />
+            <div class="col-sm-12 gallery__row">
+                <div class="gallery__container">
+                    <div class="gallery__img-container">
+                        <img class="gallery__img" src="images/gallery/applepicking.jpg" />
+                    </div>
                     <div class="gallery__description">Picking apples</div>
                 </div>
-                <div class="col-sm-6 gallery__container">
-                    <img class="gallery__img" src="images/gallery/halloween.jpg" />
+                <div class="gallery__container">
+                    <div class="gallery__img-container">
+                        <img class="gallery__img" src="images/gallery/halloween.jpg" />
+                    </div>
                     <div class="gallery__description">As Calvin and Hobbes for Halloween</div>
                 </div>
             </div>
